LU-2779 osc: Do not assert writeback in discard_cb()

This is because osc_extent_wait() may return with error so that
the pages are still in writeback state. There is noting else we
can do instead of waiting it at cl_page_own().

Signed-off-by: Jinshan Xiong <jinshan.xiong@intel.com>
Change-Id: I296ab35d26b861f3c57ddba9f74564aa439aaa0b
Patch-Set: 1